// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR deletion 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "archivedChannels": [
    "12345",
  ],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "searchedChannels": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": ":no_entry_sign: Pull request was deleted by Test Author.",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send notification to the broadcast channel, if it is specified 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "archivedChannels": [
    "12345",
  ],
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "searchedChannels": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [
    {
      "channelId": "test-broadcast-channel-id",
      "prCreationDate": 2024-04-29T08:59:44.802Z,
      "pullRequestTraits": {
        "projectKey": "TEST-PROJ",
        "pullRequestId": "1",
        "repositorySlug": "test-repository",
      },
    },
  ],
  "sentMessages": [
    {
      "channelId": "12345",
      "iconEmoji": ":bitbucket:",
      "text": ":no_entry_sign: Pull request was deleted by Test Author.",
    },
  ],
}
`;
